12215 pyzfs module does not build with python 3.7 Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Paul Winder <paul@winders.demon.co.uk> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>